Change px to em Fix displaying list of members on smaller screens

--- a/frontend/src/app/modules/new-meeting/new-meeting/new-meeting.component.sass
+++ b/frontend/src/app/modules/new-meeting/new-meeting/new-meeting.component.sass
@@ -3,7 +3,7 @@
 
 .container
     display: flex
-    height: 100%
+    min-height: 100%
     flex-direction: column
     justify-items: center
     background-color: $athens-gray
@@ -152,7 +152,7 @@
             margin-bottom: 1em
         .member-info-container
             width: 90%
-            height: 330px
+            height: 20em
             overflow-y: auto
 
     .member-info
